<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <groupId>com.pricestream</groupId>
    <artifactId>pricestream</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>PriceStream</name>
    <description>Market data aggregator using real external APIs</description>

    <modules>
        <module>core</module>
        <module>collector</module>
        <module>processor</module>
        <module>api</module>
        <module>app</module>
        <module>coverage-report</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <resilience4j.version>2.4.0</resilience4j.version>
        <lombok.version>1.18.46</lombok.version>
        <logstash-logback.version>8.1</logstash-logback.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <sonar.organization>pavlomelnyk10</sonar.organization>
        <jacoco.version>0.8.15</jacoco.version>
        <sonar.coverage.jacoco.aggregateXmlReportPaths>${maven.multiModuleProjectDirectory}/coverage-report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.aggregateXmlReportPaths>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Resilience4j -->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-bom</artifactId>
                <version>${resilience4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot4</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.pricestream</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.pricestream</groupId>
                <artifactId>collector</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.pricestream</groupId>
                <artifactId>processor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.pricestream</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
